vlib/v/checker/tests/generics_interface_declaration_err.out
vlib/v/checker/tests/generics_interface_declaration_err.vv:1:1: error: generic interface declaration must specify the generic type names, e.g. Foo<T>
    1 | interface Expr {
      | ~~~~~~~~~~~~~~~~
    2 |     accept(v Visitor<R>) R
    3 | }
