vlib/v/checker/tests/generics_interface_declaration_err.vv
interface Expr {
	accept(v Visitor<R>) R
}

interface Visitor<R> {
}

fn main() {
}
